<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      android:background="@drawable/bg_new"
     >
    
  
    <RelativeLayout
        android:id="@+id/rlayout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:gravity="center"
        
        
        >
        
           <RelativeLayout
        android:id="@+id/rlayout_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        
               
        
               
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/rlayout_logo"
                    android:gravity="center"
                   >
                     
        <RelativeLayout
            android:id="@+id/rlayout_user_id_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_btn_layout_margine_from_up"
           
            >
            <TextView
                android:id="@+id/textview_old_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              android:text="@string/lable_old_password"
                android:layout_centerVertical="true"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/default_running_text_size"
                 
                />
            
             </RelativeLayout>
             <RelativeLayout
                 
                 android:id="@+id/rlayout_user_id_value"
                  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlayout_user_id_lable"
                android:layout_marginTop="@dimen/default_value_edit_text_margine_from_up"
           
                 >
            
            <EditText
                android:id="@+id/edittext_old_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
              android:maxLength="12"
              android:singleLine="true"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
              android:ems="8"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/default_running_text_size"
                 android:background="@drawable/textbox_large"
                 android:paddingLeft="@dimen/default_inner_text_padding_very_small"
                 android:paddingRight="@dimen/default_inner_text_padding_very_small"
                />
            
            </RelativeLayout>
            
        <RelativeLayout
            android:id="@+id/rlayout_password_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:layout_below="@+id/rlayout_user_id_value"
            android:layout_marginTop="@dimen/default_layout_margine_from_up"
            
            >
            <TextView
                android:id="@+id/textview_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lable_new_password"
                android:layout_centerVertical="true"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/default_running_text_size"
                 
                />
            
            </RelativeLayout>
            
              <RelativeLayout
            android:id="@+id/rlayout_password_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlayout_password_lable"
            android:layout_marginTop="@dimen/default_value_edit_text_margine_from_up">
            
            <EditText
                android:id="@+id/edittext_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/textbox_large"
                  android:ems="8"
                android:inputType="textPassword"
                android:maxLength="12"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/default_running_text_size"
                  android:paddingLeft="@dimen/default_inner_text_padding_very_small"
                 android:paddingRight="@dimen/default_inner_text_padding_very_small"
                />
            
            </RelativeLayout>
            
              
                     
        <RelativeLayout
            android:id="@+id/rlayout_retype_password_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:layout_below="@+id/rlayout_password_value"
            android:layout_marginTop="@dimen/default_layout_margine_from_up"
            
            >
            <TextView
                android:id="@+id/textview_retype_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/lable_retype_password"
                android:layout_centerVertical="true"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/default_running_text_size"
                 
                />
            
            </RelativeLayout>
            
        
         <RelativeLayout
            android:id="@+id/rlayout_retype_password_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlayout_retype_password_lable"
            android:layout_marginTop="@dimen/default_value_edit_text_margine_from_up">
            
            <EditText
                android:id="@+id/edittext_retype_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/textbox_large"
                 android:ems="8"
                android:inputType="textPassword"
                android:maxLength="12"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/default_running_text_size"
                  android:paddingLeft="@dimen/default_inner_text_padding_very_small"
                 android:paddingRight="@dimen/default_inner_text_padding_very_small"
                />
            
            </RelativeLayout>
            
            
        <RelativeLayout
            android:id="@+id/rlayout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:layout_below="@+id/rlayout_retype_password_value"
            android:layout_marginTop="@dimen/login_btn_layout_margine_from_up"
            
            >
         
            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
              
                
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/default_running_text_size"
                 android:background="@drawable/btn_save"
                />
            
            </RelativeLayout>
            
           </RelativeLayout>
        
        </RelativeLayout>
        
        </RelativeLayout>

</RelativeLayout>
